# pm_tiny

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_en.md  build.sh  build_android.sh  linux_build.sh  scp.sh
libs/tabulate-1.5/lib/cmake/tabulate/: tabulateConfig.cmake  tabulateConfigVersion.cmake  tabulateTargets.cmake
script/: bb_pm_tiny.sh  pm_tiny.service  pm_tiny.sh  pm_tiny.yaml  test.py  test.sh  ubuntu.sh
sdk/: AppClient.cpp  AppClient.h  CMakeLists.txt  PM_Tiny_app_client.cpp  PM_Tiny_app_client.h
src/: ANSI_color.h  ScopeGuard.h  android_lmkd.cpp  android_lmkd.h  frame_stream.hpp  globals.cpp  globals.h  graph.h  graph.tpp  log.cpp  log.h  logger.hpp  memory_util.cpp  memory_util.h  pm.cpp  pm_funcs.cpp  pm_funcs.h  pm_sys.cpp  pm_sys.h  pm_tiny.cpp  pm_tiny.h  pm_tiny_enum.h  pm_tiny_funcs.cpp  pm_tiny_funcs.h  pm_tiny_helper.cpp  pm_tiny_helper.h  pm_tiny_server.cpp  pm_tiny_server.h  pm_tiny_utility.cpp  pm_tiny_utility.h  procinfo.cpp  procinfo.h  prog.cpp  prog.h  prog_cfg.cpp  prog_cfg.h  session.cpp  session.h  signal_util.cpp  signal_util.h  (+5 more)
test/: CMakeLists.txt  ScopeGuardTest.cpp  abnorm_exit_test.cpp  abort_test.cpp  close_stdout_test.cpp  color_table.cpp  forcekill_test.cpp  normal_exit_test.cpp  poll_client.cpp  poll_input.cpp  poll_server.cpp  print_env.cpp  runforever_test.cpp  sigpromask_test.cpp  string_utils_test.cpp  test_boost.cpp  test_bus_error.cpp  test_frame_stream.cpp  test_getopt.cpp  test_graph.cpp  test_list.cpp  test_oom.cpp  test_prog.cpp  test_sdk.cpp  test_sdk_c.c  test_string_utils.cpp  test_waitpid.cpp  yaml_test.cpp
